Move image and scale

--- a/blogs/pytorch-on-the-edge.html
+++ b/blogs/pytorch-on-the-edge.html
@@ -78,6 +78,8 @@
                     <section class="py-md-5 pb-4 pt-4 mt-5">
                         <div class="container-fluid">
                         <h1 class="r-heading">Run PyTorch models on the edge</h1>
+
+                        <p class="article-date">12th October, 2023</p>
     
                             <div class="row">
                                 <div class="col-12 col-md-9">
@@ -90,8 +92,10 @@
                                         <li>High cost of cloud resources (especially when device capabilities are underutilized)</li>
                                         <li>Application requirements to operate without internet connectivity</li>
                                     </ul>
+
+                                    <img src="../images/pytorch-on-the-edge-with-ort.png" style="width:70%;" alt="Diagram showing the PyTorch logo representing a PyTorch model, fanning out to icons for web, mobile and browser devices running ONNX Runtime" class="img-fluid">
+
                                     <p>In this article, we'll demystify running PyTorch models on the edge. We define 'edge' as anywhere that is outside of the cloud, ranging from large, well-resourced personal computers to small footprint devices such as mobile phones. This has been a challenging task to accomplish in the past, but new advances in model optimization and software like <a href="https://onnxruntime.ai/pytorch">ONNX Runtime</a> make it more feasible – even for new generative AI and large language models like Stable Diffusion, Whisper, and Llama2.</p>
-                                    <img src="../images/pytorch-on-the-edge-with-ort.png" alt="Diagram showing the PyTorch logo representing a PyTorch model, fanning out to icons for web, mobile and browser devices running ONNX Runtime" class="img-fluid">
 
                                     <h2 class="blue-text">Considerations for PyTorch models on the edge</h2>
 
